--- a/es.html
+++ b/es.html
@@ -10,7 +10,7 @@
     <link href="style.css" rel="stylesheet">
 
     <!-- Latest compiled JavaScript -->
-</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <title>My Portfolio - Cecilia Basti</title>
 </head>
