--- a/es.html
+++ b/es.html
@@ -66,9 +66,9 @@
                     Me entusiasma explorar nuevas oportunidades y colaborar con equipos apasionados por la innovación y el cambio..</p>    
                 <p class="text-body">Si quieres saber más sobre mí, aquí tienes mi Curriculum Vitae:</p>
                 <div class="links-cv">
-                    <a  href="resources/CV_M_CECILIA_BASTI_ES.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Español</button></a>
-                    <a  href="resources/CV_M_CECILIA_BASTI_EN.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV English</button></a>
-                    <a  href="resources/CV_M_CECILIA_BASTI_IT.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Italiano</button></a>
+                    <a  href="resources/CV - M. Cecilia Basti - Es.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Español</button></a>
+                    <a  href="resources/CV - M. Cecilia Basti - En.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV English</button></a>
+                    <a  href="resources/CV - M. Cecilia Basti - It.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Italiano</button></a>
                 </div>
             </div>
         </div>
