--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 <p class="txt-white">My goal is to continue learning and growing in the field of technology, contributing with innovative solutions that improve people's lives. 
                     I am excited to explore new opportunities and collaborate with teams passionate about innovation and change.</p>    
                 <p class="text-body">If you want to know more about me, here is my Curriculum Vitae:</p>
-                <div class="links-cv">
-                    <a  href="resources/CV_M_CECILIA_BASTI_EN.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV English</button></a>
-                    <a  href="resources/CV_M_CECILIA_BASTI_ES.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Español</button></a>
-                    <a  href="resources/CV_M_CECILIA_BASTI_IT.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Italiano</button></a>
+             <div class="links-cv">
+                    <a  href="resources/CV - M. Cecilia Basti - Es.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Español</button></a>
+                    <a  href="resources/CV - M. Cecilia Basti - En.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV English</button></a>
+                    <a  href="resources/CV - M. Cecilia Basti - It.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Italiano</button></a>
                 </div>
             </div>
         </div>
