--- a/it.html
+++ b/it.html
@@ -67,11 +67,10 @@
                 <p class="txt-white">Il mio obiettivo è continuare ad apprendere e crescere nel campo della tecnologia, contribuendo con soluzioni innovative che migliorano la vita delle persone. 
                     Sono entusiasta di esplorare nuove opportunità e collaborare con team appassionati di innovazione e cambiamento.</p>    
                 <p class="text-body">Se vuoi saperne di più su di me, ecco il mio Curriculum Vitae:</p>
-                <div class="links-cv">
-                    <a  href="resources/CV_M_CECILIA_BASTI_IT.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Italiano</button></a>
-                    <a  href="resources/CV_M_CECILIA_BASTI_EN.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV English</button></a>
-                    <a  href="resources/CV_M_CECILIA_BASTI_ES.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Español</button></a>
-                   
+              <div class="links-cv">
+                    <a  href="resources/CV - M. Cecilia Basti - Es.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Español</button></a>
+                    <a  href="resources/CV - M. Cecilia Basti - En.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV English</button></a>
+                    <a  href="resources/CV - M. Cecilia Basti - It.pdf" download target="_blank"><button type="button" class="btn btn-outline-light">CV Italiano</button></a>
                 </div>
             </div>
         </div>
