--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     </div>
                     <div class="card-body">
                       <a href="https://www.behance.net/gallery/219593291/Portfolio-proyecto-Diseno-UXUI-M-Cecilia-Basti" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Portfolio</button></a>
-                      <a href="https://www.figma.com/design/fz62gQocn0DaqeWDMqrFxW/Wireframes---Cecilia-Basti?node-id=4651-7318&t=mHiOIgY1ARAcbBEa-1" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Project</button></a>
+                      <a href="https://www.figma.com/design/fz62gQocn0DaqeWDMqrFxW/Wireframes---Cecilia-Basti?node-id=4651-7318&t=mHiOIgY1ARAcbBEa-1" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">My Project</button></a>
                     </div>
                     <div class="card-footer text-muted">
                       2024
