--- a/it.html
+++ b/it.html
@@ -305,7 +305,8 @@
                         </ul></p>
                     </div>
                     <div class="card-body">
-                      <a href="https://www.figma.com/design/fz62gQocn0DaqeWDMqrFxW/Wireframes---Cecilia-Basti?node-id=4651-7318&t=mHiOIgY1ARAcbBEa-1" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Progetto</button></a>
+                          <a href="https://www.behance.net/gallery/219593291/Portfolio-proyecto-Diseno-UXUI-M-Cecilia-Basti" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Portfolio</button></a>
+                          <a href="https://www.figma.com/design/fz62gQocn0DaqeWDMqrFxW/Wireframes---Cecilia-Basti?node-id=4651-7318&t=mHiOIgY1ARAcbBEa-1" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Progetto</button></a>
                     </div>
                     <div class="card-footer text-muted">
                       2024
