--- a/es.html
+++ b/es.html
@@ -292,7 +292,7 @@
                         <h5 class="card-title">Prototipo</h5>
                         <h6 class="card-subtitle text-muted">Aplicación de viajes </h6>
                     </div>
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/eb1KrSK8C1f752PNivY0Gl/Wireframes---Cecilia-Basti-(Entrega-Final)?node-id=11040-7316&embed-host=share" allowfullscreen></iframe>                    <div class="card-body">
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/design/eb1KrSK8C1f752PNivY0Gl/Wireframes---Cecilia-Basti-(Entrega-Final)?node-id=11040-7359&t=2Rq4xul59o6mhZqM-4" allowfullscreen></iframe>                    <div class="card-body">
                       <p class="card-text">
                         <ul>
                             <li>Realizado con Figma</li>
