--- a/es.html
+++ b/es.html
@@ -292,8 +292,7 @@
                         <h5 class="card-title">Prototipo</h5>
                         <h6 class="card-subtitle text-muted">Aplicación de viajes </h6>
                     </div>
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/proto/eb1KrSK8C1f752PNivY0Gl/Wireframes---Cecilia-Basti-(Entrega-Final)?node-id=11040-7359&t=xi7CBYsFPjrXZz9R-1&scaling=scale-down&content-scaling=fixed&page-id=11040%3A7316&starting-point-node-id=11040%3A7359" allowfullscreen></iframe>                    <div class="card-body">
-                      <p class="card-text">
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/eb1KrSK8C1f752PNivY0Gl/Wireframes---Cecilia-Basti-(Entrega-Final)?node-id=11040-7359&scaling=scale-down&content-scaling=fixed&page-id=11040%3A7316&starting-point-node-id=11040%3A7359&embed-host=share" allowfullscreen></iframe>                      <p class="card-text">
                         <ul>
                             <li>Realizado con Figma</li>
                             <li>Basado en Material Design 3</li>
