--- a/it.html
+++ b/it.html
@@ -295,7 +295,7 @@
                         <h6 class="card-subtitle text-muted">
                             Applicazione diario di viaggio</h6>
                     </div>
-                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="auto" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Ffz62gQocn0DaqeWDMqrFxW%2FWireframes---Cecilia-Basti%3Fnode-id%3D7049-3929%26t%3Dj4nx6SSPVh7Lq2Ex-1%26scaling%3Dscale-down%26content-scaling%3Dfixed%26page-id%3D4651%253A7318%26starting-point-node-id%3D7049%253A3929" allowfullscreen loading="lazy"></iframe>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="300" height="450" src="https://embed.figma.com/proto/eb1KrSK8C1f752PNivY0Gl/Wireframes---Cecilia-Basti-(Entrega-Final)?node-id=11040-7359&scaling=scale-down&content-scaling=fixed&page-id=11040%3A7316&starting-point-node-id=11040%3A7359&embed-host=share" allowfullscreen></iframe>                     
                     <div class="card-body">
                       <p class="card-text">
                         <ul>
