Update it.html actualizaciones italiano

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="accordion" id="accordionExample">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         Web Developer
                       </button>
                     </h2>
@@ -135,7 +135,7 @@
                     </div>
                      <div class="accordion-item">
                       <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseOne">
                           EdTech Referent - Teacher
                         </button>
                       </h2>
@@ -175,7 +175,7 @@
             <div class="card mb-3">
                 <div class="card-body">
                   <h5 class="card-title">Freelance</h5>
-                  <h6 class="card-subtitle text-muted">Invitación para evento</h6>
+                  <h6 class="card-subtitle text-muted">Event invitation</h6>
                 </div>
                <!-- <img src="images/ccinicio.png">-->
 
@@ -213,8 +213,8 @@
                 <div class="card-body">
                   <p class="card-text">
                     <ul>
-                        <li>Desarrollo</li>
-                        <li>Diseño responsivo</li>
+                        <li>Development</li>
+                        <li>Responsive Design</li>
                         <li>HTML - CSS - Bootstrap - JS</li>
                     </ul>
                 </p>
