--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="card mb-3">
                 <div class="card-body">
                   <h5 class="card-title">Freelance</h5>
-                  <h6 class="card-subtitle text-muted">Invitación para evento</h6>
+                  <h6 class="card-subtitle text-muted">Event invitation</h6>
                 </div>
                <!-- <img src="images/ccinicio.png">-->
 
@@ -213,15 +213,15 @@
                 <div class="card-body">
                   <p class="card-text">
                     <ul>
-                        <li>Desarrollo</li>
-                        <li>Diseño responsivo</li>
+                        <li>Development</li>
+                        <li>Responsive Design</li>
                         <li>HTML - CSS - Bootstrap - JS</li>
                     </ul>
                 </p>
                 </div>
                 <div class="card-body">
                   <a href="https://github.com/mceciliabasti/inviteProfile.git" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Código</button></a>
-                  <a href="invitedemoportfoliocb.netlify.app" class="card-link"><button type="button" class="btn btn-primary btn-sm">Sitio Web</button></a>
+                  <a href="https://invitedemoportfoliocb.netlify.app" class="card-link"><button type="button" class="btn btn-primary btn-sm">Sitio Web</button></a>
                 </div>
                 <div class="card-footer text-muted">
                   2025 
