--- a/es.html
+++ b/es.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="card-body">
                   <a href="https://github.com/mceciliabasti/inviteProfile.git" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Código</button></a>
-                  <a href="https://invitedemoportfoliocb.netlify.app" class="card-link"><button type="button" class="btn btn-primary btn-sm">Sitio Web</button></a>
+                  <a href="https://invitedemoportfoliocb.netlify.app" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Sitio Web</button></a>
                 </div>
                 <div class="card-footer text-muted">
                   2025 
