--- a/it.html
+++ b/it.html
@@ -224,7 +224,7 @@
                 </div>
                 <div class="card-body">
                   <a href="https://github.com/mceciliabasti/inviteProfile.git" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Codice</button></a>
-                  <a href="https://invitedemoportfoliocb.netlify.app" class="card-link"><button type="button" class="btn btn-primary btn-sm">Website</button></a>
+                  <a href="https://invitedemoportfoliocb.netlify.app" class="card-link" target="_blank"><button type="button" class="btn btn-primary btn-sm">Website</button></a>
                 </div>
                 <div class="card-footer text-muted">
                   2025 
